crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_1.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/list/missing_closing_bracket_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..133,
        body: [
            Expr(
                StmtExpr {
                    range: 125..133,
                    value: List(
                        ExprList {
                            range: 125..133,
                            elts: [
                                BinOp(
                                    ExprBinOp {
                                        range: 128..133,
                                        left: Name(
                                            ExprName {
                                                range: 128..129,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                range: 132..133,
                                                id: "y",
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | [
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
