crates/sifr_python_parser/tests/snapshots/invalid_syntax@expressions__list__missing_closing_bracket_2.py.snap
---
source: crates/sifr_python_parser/tests/fixtures.rs
input_file: crates/sifr_python_parser/resources/invalid/expressions/list/missing_closing_bracket_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..141,
        body: [
            Expr(
                StmtExpr {
                    range: 131..141,
                    value: List(
                        ExprList {
                            range: 131..141,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 132..133,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    ExprBinOp {
                                        range: 136..141,
                                        left: Name(
                                            ExprName {
                                                range: 136..137,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            ExprName {
                                                range: 140..141,
                                                id: "y",
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
4 | [1,
5 | 
6 | x + y
  |       Syntax Error: unexpected EOF while parsing
  |
